AlfCompiler/Lexer/lexer.js
module.exports = (function() {
  "use strict";

  /*
   * Generated by PEG.js 0.9.0.
   *
   * http://pegjs.org/
   */

  function peg$subclass(child, parent) {
    function ctor() { this.constructor = child; }
    ctor.prototype = parent.prototype;
    child.prototype = new ctor();
  }

  function peg$SyntaxError(message, expected, found, location) {
    this.message  = message;
    this.expected = expected;
    this.found    = found;
    this.location = location;
    this.name     = "SyntaxError";

    if (typeof Error.captureStackTrace === "function") {
      Error.captureStackTrace(this, peg$SyntaxError);
    }
  }

  peg$subclass(peg$SyntaxError, Error);

  function peg$parse(input) {
    var options = arguments.length > 1 ? arguments[1] : {},
        parser  = this,

        peg$FAILED = {},

        peg$startRuleFunctions = { InputText: peg$parseInputText },
        peg$startRuleFunction  = peg$parseInputText,

        peg$c0 = function(elements) {
            return elements.filter(function(item){ return item != undefined }).join("");
        },
        peg$c1 = function() { return undefined; },
        peg$c2 = function(token) { return token; },
        peg$c3 = function(token) {
            return addLocationToToken(token);
        },
        peg$c4 = ">>>",
        peg$c5 = { type: "literal", value: ">>>", description: "\">>>\"" },
        peg$c6 = "<<=",
        peg$c7 = { type: "literal", value: "<<=", description: "\"<<=\"" },
        peg$c8 = ">>=",
        peg$c9 = { type: "literal", value: ">>=", description: "\">>=\"" },
        peg$c10 = ">>>=",
        peg$c11 = { type: "literal", value: ">>>=", description: "\">>>=\"" },
        peg$c12 = "<<",
        peg$c13 = { type: "literal", value: "<<", description: "\"<<\"" },
        peg$c14 = ">>",
        peg$c15 = { type: "literal", value: ">>", description: "\">>\"" },
        peg$c16 = "==",
        peg$c17 = { type: "literal", value: "==", description: "\"==\"" },
        peg$c18 = "<=",
        peg$c19 = { type: "literal", value: "<=", description: "\"<=\"" },
        peg$c20 = ">=",
        peg$c21 = { type: "literal", value: ">=", description: "\">=\"" },
        peg$c22 = "!=",
        peg$c23 = { type: "literal", value: "!=", description: "\"!=\"" },
        peg$c24 = "&&",
        peg$c25 = { type: "literal", value: "&&", description: "\"&&\"" },
        peg$c26 = "||",
        peg$c27 = { type: "literal", value: "||", description: "\"||\"" },
        peg$c28 = "++",
        peg$c29 = { type: "literal", value: "++", description: "\"++\"" },
        peg$c30 = "--",
        peg$c31 = { type: "literal", value: "--", description: "\"--\"" },
        peg$c32 = "+=",
        peg$c33 = { type: "literal", value: "+=", description: "\"+=\"" },
        peg$c34 = "-=",
        peg$c35 = { type: "literal", value: "-=", description: "\"-=\"" },
        peg$c36 = "*=",
        peg$c37 = { type: "literal", value: "*=", description: "\"*=\"" },
        peg$c38 = "/=",
        peg$c39 = { type: "literal", value: "/=", description: "\"/=\"" },
        peg$c40 = "&=",
        peg$c41 = { type: "literal", value: "&=", description: "\"&=\"" },
        peg$c42 = "|=",
        peg$c43 = { type: "literal", value: "|=", description: "\"|=\"" },
        peg$c44 = "^=",
        peg$c45 = { type: "literal", value: "^=", description: "\"^=\"" },
        peg$c46 = "%=",
        peg$c47 = { type: "literal", value: "%=", description: "\"%=\"" },
        peg$c48 = "=",
        peg$c49 = { type: "literal", value: "=", description: "\"=\"" },
        peg$c50 = ">",
        peg$c51 = { type: "literal", value: ">", description: "\">\"" },
        peg$c52 = "<",
        peg$c53 = { type: "literal", value: "<", description: "\"<\"" },
        peg$c54 = "!",
        peg$c55 = { type: "literal", value: "!", description: "\"!\"" },
        peg$c56 = "~",
        peg$c57 = { type: "literal", value: "~", description: "\"~\"" },
        peg$c58 = "?",
        peg$c59 = { type: "literal", value: "?", description: "\"?\"" },
        peg$c60 = "@",
        peg$c61 = { type: "literal", value: "@", description: "\"@\"" },
        peg$c62 = "$",
        peg$c63 = { type: "literal", value: "$", description: "\"$\"" },
        peg$c64 = "+",
        peg$c65 = { type: "literal", value: "+", description: "\"+\"" },
        peg$c66 = "-",
        peg$c67 = { type: "literal", value: "-", description: "\"-\"" },
        peg$c68 = "*",
        peg$c69 = { type: "literal", value: "*", description: "\"*\"" },
        peg$c70 = "/",
        peg$c71 = { type: "literal", value: "/", description: "\"/\"" },
        peg$c72 = "&",
        peg$c73 = { type: "literal", value: "&", description: "\"&\"" },
        peg$c74 = "|",
        peg$c75 = { type: "literal", value: "|", description: "\"|\"" },
        peg$c76 = "^",
        peg$c77 = { type: "literal", value: "^", description: "\"^\"" },
        peg$c78 = "%",
        peg$c79 = { type: "literal", value: "%", description: "\"%\"" },
        peg$c80 = function(operatorName) {
            return addTokenType("op", operatorName);
        },
        peg$c81 = "//@",
        peg$c82 = { type: "literal", value: "//@", description: "\"//@\"" },
        peg$c83 = "/*@",
        peg$c84 = { type: "literal", value: "/*@", description: "\"/*@\"" },
        peg$c85 = "..",
        peg$c86 = { type: "literal", value: "..", description: "\"..\"" },
        peg$c87 = "::",
        peg$c88 = { type: "literal", value: "::", description: "\"::\"" },
        peg$c89 = "=>",
        peg$c90 = { type: "literal", value: "=>", description: "\"=>\"" },
        peg$c91 = "->",
        peg$c92 = { type: "literal", value: "->", description: "\"->\"" },
        peg$c93 = "(",
        peg$c94 = { type: "literal", value: "(", description: "\"(\"" },
        peg$c95 = ")",
        peg$c96 = { type: "literal", value: ")", description: "\")\"" },
        peg$c97 = "{",
        peg$c98 = { type: "literal", value: "{", description: "\"{\"" },
        peg$c99 = "}",
        peg$c100 = { type: "literal", value: "}", description: "\"}\"" },
        peg$c101 = "[",
        peg$c102 = { type: "literal", value: "[", description: "\"[\"" },
        peg$c103 = "]",
        peg$c104 = { type: "literal", value: "]", description: "\"]\"" },
        peg$c105 = ";",
        peg$c106 = { type: "literal", value: ";", description: "\";\"" },
        peg$c107 = ",",
        peg$c108 = { type: "literal", value: ",", description: "\",\"" },
        peg$c109 = ".",
        peg$c110 = { type: "literal", value: ".", description: "\".\"" },
        peg$c111 = ":",
        peg$c112 = { type: "literal", value: ":", description: "\":\"" },
        peg$c113 = function(punctuationName) {
            return addTokenType("p", punctuationName);
        },
        peg$c114 = function(value) { return addTokenType("blt", '"' + value + '"'); },
        peg$c115 = function(value) { return addTokenType("nlt", '"' + value + '"'); },
        peg$c116 = function(value) { return addTokenType("slt", '"' + value + '"'); },
        peg$c117 = "true",
        peg$c118 = { type: "literal", value: "true", description: "\"true\"" },
        peg$c119 = "false",
        peg$c120 = { type: "literal", value: "false", description: "\"false\"" },
        peg$c121 = "\"",
        peg$c122 = { type: "literal", value: "\"", description: "\"\\\"\"" },
        peg$c123 = function(chars) { return chars.join(""); },
        peg$c124 = "\\",
        peg$c125 = { type: "literal", value: "\\", description: "\"\\\\\"" },
        peg$c126 = function(character) { return character; },
        peg$c127 = function(number) { return parseInt(number, 2).toString(); },
        peg$c128 = function(number) { return parseInt(number, 16).toString(); },
        peg$c129 = function(number) { return parseInt(number, 8).toString(); },
        peg$c130 = function(number) { return parseInt(number).toString(); },
        peg$c131 = "0",
        peg$c132 = { type: "literal", value: "0", description: "\"0\"" },
        peg$c133 = "_",
        peg$c134 = { type: "literal", value: "_", description: "\"_\"" },
        peg$c135 = function(first, digit) { return digit; },
        peg$c136 = function(first, other) { return [first].concat(other).join(""); },
        peg$c137 = "0b",
        peg$c138 = { type: "literal", value: "0b", description: "\"0b\"" },
        peg$c139 = "0B",
        peg$c140 = { type: "literal", value: "0B", description: "\"0B\"" },
        peg$c141 = /^[0-1]/,
        peg$c142 = { type: "class", value: "[0-1]", description: "[0-1]" },
        peg$c143 = "x",
        peg$c144 = { type: "literal", value: "x", description: "\"x\"" },
        peg$c145 = "X",
        peg$c146 = { type: "literal", value: "X", description: "\"X\"" },
        peg$c147 = /^[A-Fa-f]/,
        peg$c148 = { type: "class", value: "[A-Fa-f]", description: "[A-Fa-f]" },
        peg$c149 = /^[0-7]/,
        peg$c150 = { type: "class", value: "[0-7]", description: "[0-7]" },
        peg$c151 = "abstract",
        peg$c152 = { type: "literal", value: "abstract", description: "\"abstract\"" },
        peg$c153 = "accept",
        peg$c154 = { type: "literal", value: "accept", description: "\"accept\"" },
        peg$c155 = "active",
        peg$c156 = { type: "literal", value: "active", description: "\"active\"" },
        peg$c157 = "activity",
        peg$c158 = { type: "literal", value: "activity", description: "\"activity\"" },
        peg$c159 = "allInstances",
        peg$c160 = { type: "literal", value: "allInstances", description: "\"allInstances\"" },
        peg$c161 = "any",
        peg$c162 = { type: "literal", value: "any", description: "\"any\"" },
        peg$c163 = "as",
        peg$c164 = { type: "literal", value: "as", description: "\"as\"" },
        peg$c165 = "assoc",
        peg$c166 = { type: "literal", value: "assoc", description: "\"assoc\"" },
        peg$c167 = "break",
        peg$c168 = { type: "literal", value: "break", description: "\"break\"" },
        peg$c169 = "case",
        peg$c170 = { type: "literal", value: "case", description: "\"case\"" },
        peg$c171 = "class",
        peg$c172 = { type: "literal", value: "class", description: "\"class\"" },
        peg$c173 = "classify",
        peg$c174 = { type: "literal", value: "classify", description: "\"classify\"" },
        peg$c175 = "clearAssoc",
        peg$c176 = { type: "literal", value: "clearAssoc", description: "\"clearAssoc\"" },
        peg$c177 = "compose",
        peg$c178 = { type: "literal", value: "compose", description: "\"compose\"" },
        peg$c179 = "createLink",
        peg$c180 = { type: "literal", value: "createLink", description: "\"createLink\"" },
        peg$c181 = "datatype",
        peg$c182 = { type: "literal", value: "datatype", description: "\"datatype\"" },
        peg$c183 = "default",
        peg$c184 = { type: "literal", value: "default", description: "\"default\"" },
        peg$c185 = "destroyLink",
        peg$c186 = { type: "literal", value: "destroyLink", description: "\"destroyLink\"" },
        peg$c187 = "do",
        peg$c188 = { type: "literal", value: "do", description: "\"do\"" },
        peg$c189 = "else",
        peg$c190 = { type: "literal", value: "else", description: "\"else\"" },
        peg$c191 = "enum",
        peg$c192 = { type: "literal", value: "enum", description: "\"enum\"" },
        peg$c193 = "for",
        peg$c194 = { type: "literal", value: "for", description: "\"for\"" },
        peg$c195 = "from",
        peg$c196 = { type: "literal", value: "from", description: "\"from\"" },
        peg$c197 = "hastype",
        peg$c198 = { type: "literal", value: "hastype", description: "\"hastype\"" },
        peg$c199 = "if",
        peg$c200 = { type: "literal", value: "if", description: "\"if\"" },
        peg$c201 = "import",
        peg$c202 = { type: "literal", value: "import", description: "\"import\"" },
        peg$c203 = "in",
        peg$c204 = { type: "literal", value: "in", description: "\"in\"" },
        peg$c205 = "inout",
        peg$c206 = { type: "literal", value: "inout", description: "\"inout\"" },
        peg$c207 = "instanceof",
        peg$c208 = { type: "literal", value: "instanceof", description: "\"instanceof\"" },
        peg$c209 = "let",
        peg$c210 = { type: "literal", value: "let", description: "\"let\"" },
        peg$c211 = "namespace",
        peg$c212 = { type: "literal", value: "namespace", description: "\"namespace\"" },
        peg$c213 = "new",
        peg$c214 = { type: "literal", value: "new", description: "\"new\"" },
        peg$c215 = "nonunique",
        peg$c216 = { type: "literal", value: "nonunique", description: "\"nonunique\"" },
        peg$c217 = "null",
        peg$c218 = { type: "literal", value: "null", description: "\"null\"" },
        peg$c219 = "or",
        peg$c220 = { type: "literal", value: "or", description: "\"or\"" },
        peg$c221 = "ordered",
        peg$c222 = { type: "literal", value: "ordered", description: "\"ordered\"" },
        peg$c223 = "out",
        peg$c224 = { type: "literal", value: "out", description: "\"out\"" },
        peg$c225 = "package",
        peg$c226 = { type: "literal", value: "package", description: "\"package\"" },
        peg$c227 = "private",
        peg$c228 = { type: "literal", value: "private", description: "\"private\"" },
        peg$c229 = "protected",
        peg$c230 = { type: "literal", value: "protected", description: "\"protected\"" },
        peg$c231 = "public",
        peg$c232 = { type: "literal", value: "public", description: "\"public\"" },
        peg$c233 = "receive",
        peg$c234 = { type: "literal", value: "receive", description: "\"receive\"" },
        peg$c235 = "redefines",
        peg$c236 = { type: "literal", value: "redefines", description: "\"redefines\"" },
        peg$c237 = "reduce",
        peg$c238 = { type: "literal", value: "reduce", description: "\"reduce\"" },
        peg$c239 = "return",
        peg$c240 = { type: "literal", value: "return", description: "\"return\"" },
        peg$c241 = "sequence",
        peg$c242 = { type: "literal", value: "sequence", description: "\"sequence\"" },
        peg$c243 = "specializes",
        peg$c244 = { type: "literal", value: "specializes", description: "\"specializes\"" },
        peg$c245 = "super",
        peg$c246 = { type: "literal", value: "super", description: "\"super\"" },
        peg$c247 = "signal",
        peg$c248 = { type: "literal", value: "signal", description: "\"signal\"" },
        peg$c249 = "switch",
        peg$c250 = { type: "literal", value: "switch", description: "\"switch\"" },
        peg$c251 = "this",
        peg$c252 = { type: "literal", value: "this", description: "\"this\"" },
        peg$c253 = "to",
        peg$c254 = { type: "literal", value: "to", description: "\"to\"" },
        peg$c255 = "while",
        peg$c256 = { type: "literal", value: "while", description: "\"while\"" },
        peg$c257 = function(keywordName) {
            return addTokenType("kw", keywordName);
        },
        peg$c258 = function(name) {
            name = "\"" + name + "\""; 
            return addTokenType("n", name);
        },
        peg$c259 = function(identifier) { 
            return identifier; 
        },
        peg$c260 = function(first, other) {
            return [first].concat(other).join("");
        },
        peg$c261 = /^[A-Za-z_]/,
        peg$c262 = { type: "class", value: "[A-Za-z_]", description: "[A-Za-z_]" },
        peg$c263 = /^[1-9]/,
        peg$c264 = { type: "class", value: "[1-9]", description: "[1-9]" },
        peg$c265 = "'",
        peg$c266 = { type: "literal", value: "'", description: "\"'\"" },
        peg$c267 = function(escapeChar) { return "\\" + escapeChar; },
        peg$c268 = "b",
        peg$c269 = { type: "literal", value: "b", description: "\"b\"" },
        peg$c270 = "f",
        peg$c271 = { type: "literal", value: "f", description: "\"f\"" },
        peg$c272 = "t",
        peg$c273 = { type: "literal", value: "t", description: "\"t\"" },
        peg$c274 = "n",
        peg$c275 = { type: "literal", value: "n", description: "\"n\"" },
        peg$c276 = "/**",
        peg$c277 = { type: "literal", value: "/**", description: "\"/**\"" },
        peg$c278 = "*/",
        peg$c279 = { type: "literal", value: "*/", description: "\"*/\"" },
        peg$c280 = function(commentText) {
            commentText = '"' + commentText + '"';
            return addTokenType("dc", commentText);
        },
        peg$c281 = "//",
        peg$c282 = { type: "literal", value: "//", description: "\"//\"" },
        peg$c283 = "/*",
        peg$c284 = { type: "literal", value: "/*", description: "\"/*\"" },
        peg$c285 = function(chars, otherText) {
            chars = chars.join("");
            if(otherText !== null) chars += otherText;
            chars = chars.replace(/\r/g, "");
            chars = chars.replace(/\n/g, "\\n");
            return chars;
        },
        peg$c286 = " ",
        peg$c287 = { type: "literal", value: " ", description: "\" \"" },
        peg$c288 = "\t",
        peg$c289 = { type: "literal", value: "\t", description: "\"\\t\"" },
        peg$c290 = "\f",
        peg$c291 = { type: "literal", value: "\f", description: "\"\\f\"" },
        peg$c292 = "\n",
        peg$c293 = { type: "literal", value: "\n", description: "\"\\n\"" },
        peg$c294 = "\r",
        peg$c295 = { type: "literal", value: "\r", description: "\"\\r\"" },
        peg$c296 = { type: "any", description: "any character" },

        peg$currPos          = 0,
        peg$savedPos         = 0,
        peg$posDetailsCache  = [{ line: 1, column: 1, seenCR: false }],
        peg$maxFailPos       = 0,
        peg$maxFailExpected  = [],
        peg$silentFails      = 0,

        peg$result;

    if ("startRule" in options) {
      if (!(options.startRule in peg$startRuleFunctions)) {
        throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
      }

      peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
    }

    function text() {
      return input.substring(peg$savedPos, peg$currPos);
    }

    function location() {
      return peg$computeLocation(peg$savedPos, peg$currPos);
    }

    function expected(description) {
      throw peg$buildException(
        null,
        [{ type: "other", description: description }],
        input.substring(peg$savedPos, peg$currPos),
        peg$computeLocation(peg$savedPos, peg$currPos)
      );
    }

    function error(message) {
      throw peg$buildException(
        message,
        null,
        input.substring(peg$savedPos, peg$currPos),
        peg$computeLocation(peg$savedPos, peg$currPos)
      );
    }

    function peg$computePosDetails(pos) {
      var details = peg$posDetailsCache[pos],
          p, ch;

      if (details) {
        return details;
      } else {
        p = pos - 1;
        while (!peg$posDetailsCache[p]) {
          p--;
        }

        details = peg$posDetailsCache[p];
        details = {
          line:   details.line,
          column: details.column,
          seenCR: details.seenCR
        };

        while (p < pos) {
          ch = input.charAt(p);
          if (ch === "\n") {
            if (!details.seenCR) { details.line++; }
            details.column = 1;
            details.seenCR = false;
          } else if (ch === "\r" || ch === "\u2028" || ch === "\u2029") {
            details.line++;
            details.column = 1;
            details.seenCR = true;
          } else {
            details.column++;
            details.seenCR = false;
          }

          p++;
        }

        peg$posDetailsCache[pos] = details;
        return details;
      }
    }

    function peg$computeLocation(startPos, endPos) {
      var startPosDetails = peg$computePosDetails(startPos),
          endPosDetails   = peg$computePosDetails(endPos);

      return {
        start: {
          offset: startPos,
          line:   startPosDetails.line,
          column: startPosDetails.column
        },
        end: {
          offset: endPos,
          line:   endPosDetails.line,
          column: endPosDetails.column
        }
      };
    }

    function peg$fail(expected) {
      if (peg$currPos < peg$maxFailPos) { return; }

      if (peg$currPos > peg$maxFailPos) {
        peg$maxFailPos = peg$currPos;
        peg$maxFailExpected = [];
      }

      peg$maxFailExpected.push(expected);
    }

    function peg$buildException(message, expected, found, location) {
      function cleanupExpected(expected) {
        var i = 1;

        expected.sort(function(a, b) {
          if (a.description < b.description) {
            return -1;
          } else if (a.description > b.description) {
            return 1;
          } else {
            return 0;
          }
        });

        while (i < expected.length) {
          if (expected[i - 1] === expected[i]) {
            expected.splice(i, 1);
          } else {
            i++;
          }
        }
      }

      function buildMessage(expected, found) {
        function stringEscape(s) {
          function hex(ch) { return ch.charCodeAt(0).toString(16).toUpperCase(); }

          return s
            .replace(/\\/g,   '\\\\')
            .replace(/"/g,    '\\"')
            .replace(/\x08/g, '\\b')
            .replace(/\t/g,   '\\t')
            .replace(/\n/g,   '\\n')
            .replace(/\f/g,   '\\f')
            .replace(/\r/g,   '\\r')
            .replace(/[\x00-\x07\x0B\x0E\x0F]/g, function(ch) { return '\\x0' + hex(ch); })
            .replace(/[\x10-\x1F\x80-\xFF]/g,    function(ch) { return '\\x'  + hex(ch); })
            .replace(/[\u0100-\u0FFF]/g,         function(ch) { return '\\u0' + hex(ch); })
            .replace(/[\u1000-\uFFFF]/g,         function(ch) { return '\\u'  + hex(ch); });
        }

        var expectedDescs = new Array(expected.length),
            expectedDesc, foundDesc, i;

        for (i = 0; i < expected.length; i++) {
          expectedDescs[i] = expected[i].description;
        }

        expectedDesc = expected.length > 1
          ? expectedDescs.slice(0, -1).join(", ")
              + " or "
              + expectedDescs[expected.length - 1]
          : expectedDescs[0];

        foundDesc = found ? "\"" + stringEscape(found) + "\"" : "end of input";

        return "Expected " + expectedDesc + " but " + foundDesc + " found.";
      }

      if (expected !== null) {
        cleanupExpected(expected);
      }

      return new peg$SyntaxError(
        message !== null ? message : buildMessage(expected, found),
        expected,
        found,
        location
      );
    }

    function peg$parseInputText() {
      var s0, s1, s2;

      s0 = peg$currPos;
      s1 = [];
      s2 = peg$parseInputElement();
      if (s2 !== peg$FAILED) {
        while (s2 !== peg$FAILED) {
          s1.push(s2);
          s2 = peg$parseInputElement();
        }
      } else {
        s1 = peg$FAILED;
      }
      if (s1 !== peg$FAILED) {
        peg$savedPos = s0;
        s1 = peg$c0(s1);
      }
      s0 = s1;

      return s0;
    }

    function peg$parseInputElement() {
      var s0, s1;

      s0 = peg$currPos;
      s1 = peg$parseWhiteSpace();
      if (s1 !== peg$FAILED) {
        peg$savedPos = s0;
        s1 = peg$c1();
      }
      s0 = s1;
      if (s0 === peg$FAILED) {
        s0 = peg$currPos;
        s1 = peg$parseLexicalComment();
        if (s1 !== peg$FAILED) {
          peg$savedPos = s0;
          s1 = peg$c1();
        }
        s0 = s1;
        if (s0 === peg$FAILED) {
          s0 = peg$currPos;
          s1 = peg$parseToken();
          if (s1 !== peg$FAILED) {
            peg$savedPos = s0;
            s1 = peg$c2(s1);
          }
          s0 = s1;
        }
      }

      return s0;
    }

    function peg$parseToken() {
      var s0, s1;

      s0 = peg$currPos;
      s1 = peg$parseDocumentationComment();
      if (s1 === peg$FAILED) {
        s1 = peg$parseReservedWord();
        if (s1 === peg$FAILED) {
          s1 = peg$parsePunctuation();
          if (s1 === peg$FAILED) {
            s1 = peg$parseOperator();
            if (s1 === peg$FAILED) {
              s1 = peg$parsePrimitiveLiteral();
              if (s1 === peg$FAILED) {
                s1 = peg$parseName();
              }
            }
          }
        }
      }
      if (s1 !== peg$FAILED) {
        peg$savedPos = s0;
        s1 = peg$c3(s1);
      }
      s0 = s1;

      return s0;
    }

    function peg$parseOperator() {
      var s0, s1;
